# minecraft-bedrock-internal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  game.cpp  game.hpp  hooks.cpp  hooks.hpp  main.cpp  module_manager.cpp  module_manager.hpp  plugin_manager.cpp  plugin_manager.hpp  values.cpp  values.hpp
client/game_utils/: chat_util.cpp  chat_util.hpp
client/mc_sdk/: entt.cpp  entt.hpp  list_container.hpp  string_container.cpp  string_container.hpp  structs.hpp  vec.hpp
client/utils/: chat_util.cpp  chat_util.hpp
common/: CMakeLists.txt
common/include/common/: fnvhash.hpp  logging.hpp  metapp.hpp  pattern_scanner.hpp  utils.hpp
common/src/: fnvhash.cpp  logging.cpp  pattern_scanner.cpp  utils.cpp
loader/: CMakeLists.txt  main.cpp
sdk/: CMakeLists.txt
sdk/include/sdk/: client_interface.hpp  module_interface.hpp  plugin_interface.hpp  sdk_interface.hpp  vec.hpp
sdk/src/: vec.cpp
